A bit of random work on AI, got everything to compile

--- a/public/templates/components/roll-collab-mod.hbs
+++ b/public/templates/components/roll-collab-mod.hbs
@@ -1,6 +1,6 @@
 
 
-<span class="roll-mod-container status-{{case "lower" status}} posneg-{{posNeg}} {{~#if tooltip}} tooltip-trigger{{/if}}{{~#if modType}} roll-mod-{{modType}}{{/if}}">
+<span id="{{id}}" class="roll-mod-container status-{{case "lower" status}} posneg-{{posNeg}} {{~#if tooltip}} tooltip-trigger{{/if}}{{~#if modType}} roll-mod-{{modType}}{{/if}}" data-action="player-toggle-mod">
 
   <span class="roll-mod-label">
     <span class="roll-mod-text">
