--- a/src/scss/overlay/_blades-overlay.scss
+++ b/src/scss/overlay/_blades-overlay.scss
@@ -40,7 +40,7 @@
       background: rgba(0, 255, 255, 0.25);
       outline: 1px solid rgba(0, 255, 255, 1);
       visibility: visible;
-      pointer-events: all;
+      pointer-events: auto;
     }
   }
 
