--- a/src/scss/sheets/_clock-keeper-sheet.scss
+++ b/src/scss/sheets/_clock-keeper-sheet.scss
@@ -78,7 +78,7 @@
               background: var(--blades-black-dark);
               border: none;
               width: 200px;
-              pointer-events: all;
+              pointer-events: auto;
             }
           }
         }
