--- a/src/scss/sheets/_npc-sheet.scss
+++ b/src/scss/sheets/_npc-sheet.scss
@@ -58,7 +58,7 @@
                 // right: 23px;
                 position: static;
                 margin-top: 5px;
-                pointer-events: all;
+                pointer-events: auto;
 
                 .status-neutral {
                   scale: 2 1;
