--- a/src/scss/sheets/_pc-sheet.scss
+++ b/src/scss/sheets/_pc-sheet.scss
@@ -527,7 +527,7 @@
               .comp-body {
                 height: 100%;
                 width: 100%;
-                pointer-events: all;
+                pointer-events: auto;
                 .gather-info-icon {
                   height: 100%;
                 }
